# y-logger

./: .env.dist  README.md  TODO.md  app_logging.py  config.py  pyproject.toml
app/: y_logger.py
chat_logger/: __init__.py
chat_logger/discord/: discord_handler.py
chat_logger/slack/: slack_handler.py
test/: test_logger.py
