[tool.poetry]
name = "y-logger"
version = "0.1.0"
description = "Standard Logging Helper"
authors = ["Yogesh <yogeshdtu@gmail.com>"]
license = "CLOSED"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.19.2"
slack-sdk = "^3.11.2"
fluent-logger = "^0.10.0"
aiohttp = "^3.8.1"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
